// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select.svelte > should emit the change event when the value changes 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative open"
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
        <icon
          aria-label="opened"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-opened"
          />
        </icon>
      </selected-item>
       
      <scroll
        class="flex flex-col absolute w-full z-10 overflow-scroll menu"
        style="top: 0px; animation: __svelte_3328443287_0 50ms linear 0ms 1 both;"
      >
        <list
          class="flex flex-col w-full flex-shrink-0 select-none list"
          role="listbox"
          tabindex="-1"
        >
           
          <item
            aria-selected="false"
            class="item"
            data-path="0"
            role="option"
          >
            
             
            <p>
              a
            </p>
            
             
          </item>
          <item
            aria-selected="false"
            class="item"
            data-path="1"
            role="option"
          >
            
             
            <p>
              b
            </p>
            
             
          </item>
          <item
            aria-selected="false"
            class="item"
            data-path="2"
            role="option"
          >
            
             
            <p>
              c
            </p>
            
             
          </item>
        </list>
      </scroll>
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using custom component 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using custom mapping 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using default item when data is invalid 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using field mappings 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render using default field mapping 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render with alternate class 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative myClass"
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;
